<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so_arm100_gym_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo-specific implementations for the so_arm100_gym project</description>
  <maintainer email="manohara01012005@gmail.com">Manohara</maintainer>
  <license>Apache 2.0</license>
  <author>Manohara</author>

  <depend>so_arm100_gym_description</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gz_ros2_control</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

