<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so_arm100_teleop_description</name>
  <version>0.0.0</version>
  <description>SDFormat description files for the so_arm100_teleop project</description>
  <maintainer email="manohara01012005@gmail.com">Manohara</maintainer>
  <license>Apache 2.0</license>
  <author>Manohara</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <depend>gz_ros2_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gz_sim_resource_path>${prefix}/models</gz_sim_resource_path>
  </export>
</package>
